# HiPoNet

./: .gitignore  classification_job.sh  main_ST.py  main_classification.py  main_node_embeddings.py  node_embedding_job.sh  node_embedding_visualization.ipynb  notes.md  pyproject.toml  st_job.sh  wavelet.py
models/: GWT.py  graph_learning.py
utils/: preprocess.py  preprocess_sea.py  read_data.py  training.py
